[CSS] fix purchase tickets page misalignments (#3165)

--- a/app/components/buttons/ToggleSwitch/ToggleSwitch.module.css
+++ b/app/components/buttons/ToggleSwitch/ToggleSwitch.module.css
@@ -1,10 +1,7 @@
 .toggleSwitch {
   display: inline-block;
   vertical-align: middle;
-  margin-right: 0.5em;
-
-  margin-bottom: 10px;
-  width: 85px;
+  margin: 0 0 10px 1em;
 }
 
 .enabled,
